; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ec/extr_ecdh_kdf.c_ECDH_KDF_X9_62.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ec/extr_ecdh_kdf.c_ECDH_KDF_X9_62.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ECDH_KDF_X9_62(i8* %0, i64 %1, i8* %2, i64 %3, i8* %4, i64 %5, i32* %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32*, align 8
  store i8* %0, i8** %8, align 8
  store i64 %1, i64* %9, align 8
  store i8* %2, i8** %10, align 8
  store i64 %3, i64* %11, align 8
  store i8* %4, i8** %12, align 8
  store i64 %5, i64* %13, align 8
  store i32* %6, i32** %14, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = load i64, i64* %9, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = load i64, i64* %11, align 8
  %19 = load i8*, i8** %12, align 8
  %20 = load i64, i64* %13, align 8
  %21 = load i32*, i32** %14, align 8
  %22 = call i32 @ecdh_KDF_X9_63(i8* %15, i64 %16, i8* %17, i64 %18, i8* %19, i64 %20, i32* %21)
  ret i32 %22
}

declare dso_local i32 @ecdh_KDF_X9_63(i8*, i64, i8*, i64, i8*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
